<resources>
    <string name="app_name">Биопедия</string>
    <string name="main_page_title">Биопедия</string>
    <string name="exit">Выход</string>
    <string name="flashlight">Фонарик</string>
    <string name="flashlight_on">Фонарик включен</string>
    <string name="error">Ошибка</string>
    <string name="camera_perm_dialog_supporting_text">Для работы QR-сканера требуется разрешение на использование камеры</string>
    <string name="decline">Отмена</string>
    <string name="camera_init_dialog_supporting_text">Ошибка инициализации камеры. Обратитесь в поддержку</string>
    <string name="grant">Предоставить</string>
    <string name="contact">Обратиться</string>
    <string name="open_biopda">Открыть биопедию</string>
    <string name="scan_qr_code">Отсканируйте QR-код</string>
    <string name="support">Поддержка</string>
    <string name="settings">Настройки</string>
    <string name="about_app">О приложении</string>
    <string name="made_with_love">Made with &#10084; by pigin</string>
    <string name="help_text_1">Сканируй QR-код этим приложением и находи много нового и интересного о экспонате</string>
    <string name="vkontakte">ВКонтакте</string>
    <string name="github">GitHub</string>
    <string name="app_not_found">Приложение не найдено</string>

    <!--    Url -->
    <string name="biopda_url">https://biopda.ru/</string>
    <string name="pigin_gh_url">https://github.com/pigin-gh</string>
    <string name="pigin_vk_url">https://vk.com/pigin_vk</string>

    <!--    Email -->
    <string name="support_address">biopda.info@gmail.com</string>
    <string name="support_email_text_error">Пожалуйста, напишите тут модель своего устройства и ваши действия при возникновении проблемы: </string>
    <string name="support_email_subject_error">Ошибка в приложении Биопедия</string>


</resources>