<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.ScannerFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/home"
            app:title="@string/main_page_title"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:id="@+id/help_card">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/help_icon"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/ic_outline_help_outline_24" />

                <TextView
                    android:id="@+id/help_tv"
                    style="@style/TextAppearance.Material3.TitleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/help_icon"
                    android:text="@string/help_text_1"
                    android:textColor="#505050"
                    android:maxWidth="250dp"
                    android:layout_marginVertical="16dp"/>

                <ImageButton
                    android:id="@+id/close_help_card"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rectangle"
                    android:src="@drawable/ic_baseline_close_24" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/scanner_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp">

                <com.budiyev.android.codescanner.CodeScannerView
                    android:id="@+id/scanner_view"
                    android:layout_width="264dp"
                    android:layout_height="264dp"
                    android:layout_centerInParent="true"
                    app:autoFocusButtonVisible="false"
                    app:flashButtonVisible="false"
                    app:frameAspectRatioHeight="1"
                    app:frameAspectRatioWidth="1"
                    app:frameColor="@color/white"
                    app:frameCornersRadius="16dp"
                    app:frameCornersSize="75dp"
                    app:frameSize="0.9"
                    app:frameThickness="2dp"
                    app:maskVisible="false" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/flash_button"
                android:layout_width="264dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/scanner_card"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/flashlight"
                app:icon="@drawable/ic_baseline_flash_on_24"
                app:iconGravity="textStart" />

        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/biopda_icon"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/biopda_logo" />

                <TextView
                    android:id="@+id/open_biopda_tv"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/biopda_icon"
                    android:text="@string/open_biopda" />

                <ImageButton
                    android:id="@+id/open_biopda_bt"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rectangle"
                    android:src="@drawable/ic_baseline_start_24" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

</RelativeLayout>